[workspace]
members = [
	"async_ui_core/",
	"async_ui_web/",
	"async_ui_gtk/",
	"observables/",
	"ordered_btree/",
	"scoped_async_spawn/",
	"x-bow",
	"x-bow-macros/",
	"examples/playground/",
	"examples/web-counter/",
	"examples/gtk-counter/",
	"examples/web-todomvc/",
	"examples/web-hackernews/",
]