[workspace]
members = [
	"async_ui/",
	"async_ui_web/",
	"async_ui_web_core/",
	"async_ui_web_html/",
	"async_ui_web_macros/",
	"async_ui_internal_utils/",
	"x-bow/",
	"x-bow-macros/",
	"examples/web-simple-examples/",
	"examples/web-todomvc/",
	"examples/big-list/",
	"examples/x-bow-playground/",
	"examples/async_ui_web_draggable/",
]