[package]
name = "async_ui"
version = "0.0.0"
edition = "2021"
description = "UI library where everything is a Future; This crate is empty — see repo."
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
