[package]
name = "async_ui_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.8"
smallvec = { version = "1.8.0", features = ["const_generics", "const_new", "union"] }
scoped-tls = "1.0.0"