[package]
name = "async_ui_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.8"
smallvec = { version = "1.8.0", features = ["const_generics", "const_new", "union"] }
scoped-tls = "1.0.0"
scopeguard = "1.1.0"

async_ui_reactive = { path = "../async_ui_reactive/" }
async_ui_utils = { path = "../async_ui_utils/" }
futures = "0.3.21"
pin-cell = "0.2.0"
pin-weak = "1.1.0"

async-executor = "1.4.1"

paste = "1.0"
waker-fn = "1.1.0"