[package]
name = "async_ui_core"
version = "0.1.0"
edition = "2021"
description = "Shared code for Async UI"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scoped_async_spawn = { path = "../scoped_async_spawn/", version = "0.1.0" }
async-task = "4.3.0"
async-executor = "1.4.1"
pin-project-lite = "0.2.9"
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }
enum_dispatch = "0.3.8"
scoped-tls = "1.0.0"
im-rc = "15.1.0"
slab = "0.4.7"