[package]
name = "async_ui_gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_ui_core = { path = "../async_ui_core/" }
async_ui_utils = { path = "../async_ui_utils/" }
async_ui_reactive = { path = "../async_ui_reactive/" }
pin-project-lite = "0.2.8"
smallvec = { version = "1.8.0", features = ["const_generics", "const_new", "union"] }
scoped-tls = "1.0.0"
lazy_static = "1.4.0"
futures = "0.3.21"
scopeguard = "1.1.0"
async-executor = "1.4.1"

gtk = { package = "gtk4", version = "0.4" }
glib = "0.15"