[package]
name = "async_ui_gtk_widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_ui_gtk = { path = "../async_ui_gtk/" }
async_ui_utils = { path = "../async_ui_utils/" }
async_ui_reactive = { path = "../async_ui_reactive/" }
futures = "0.3.21"
paste = "1.0"

pin-project-lite = "0.2.8"
gtk = { package = "gtk4", version = "0.4" }
glib = "0.15"
slab = "0.4.5"