[package]
name = "async_ui_spawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pin-project-lite = "0.2.8"
sealed = "0.4"
scoped-tls = "1.0.0"
waker-fn = "1.1.0"
async-executor = "1.4.1"
slab = "0.4.5"
wasm-bindgen = "0.2.74"
smallvec = { version = "1.8.0", features = ["const_generics", "const_new", "union"] }

[dependencies.web-sys]
version = "0.3.56"
features = [
	'console',
	'Window'
]