[package]
name = "async_ui_spawners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4.1"
async_ui_core = { path = "../async_ui_core/" }
scoped-tls = "1.0.0"
pin-project-lite = "0.2.8"

waker-fn = "1.1.0"
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.56", features = ['Window'] }