[package]
name = "async_ui_web"
version = "0.1.0"
edition = "2021"
description = "Async UI for the Browser"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_ui_web_core = { path = "../async_ui_web_core/" }
async_ui_web_components = { path = "../async_ui_web_components/" }
async_ui_web_macros = { path = "../async_ui_web_macros/" }
async_ui_internal_utils = { path = "../async_ui_internal_utils/" }

async-executor = "1.5.0"
futures-lite = "1.12.0"

js-sys = "0.3.63"
wasm-bindgen = "0.2.86"

[dependencies.web-sys]
version = "0.3.63"
features = [
	'DocumentFragment',
	'IntersectionObserver',
	'IntersectionObserverInit',
	'IntersectionObserverEntry',
	'DomRect',
	'console'
]