[package]
name = "async_ui_web"
version = "0.2.1"
edition = "2021"
description = "Async UI for the Browser"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"
categories = ["gui", "wasm", "web-programming", "asynchronous"]
keywords = ["gui", "wasm", "web-programming", "asynchronous"]
documentation = "https://docs.rs/async_ui_web"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
async_ui_web_core = { version = "0.2.1", path = "../async_ui_web_core/" }
async_ui_web_html = { version = "0.2.0", path = "../async_ui_web_html/" }
async_ui_web_macros = { version = "0.2.0", path = "../async_ui_web_macros/" }
async_ui_internal_utils = { version = "0.0.2", path = "../async_ui_internal_utils/" }

async-executor = "1.5.0"
futures-lite = "1.13.0"

scopeguard = "1.1.0"

js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
	'DocumentFragment',
	'DomRect',
	'IntersectionObserver',
	'IntersectionObserverInit',
	'IntersectionObserverEntry',
	'console'
]