[package]
name = "async_ui_web_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0"
async_ui_web_core = { path = "../async_ui_web_core/" }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
futures-core = "0.3.25"
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
	'Node',
	'Window',
	'Document',
	'HtmlElement',
	'HtmlAnchorElement',
	'HtmlButtonElement',
	'HtmlDivElement',
	'HtmlInputElement',
	'HtmlSpanElement',
	'HtmlTextAreaElement',
	'Text',	
	'ClipboardEvent',
	'CompositionEvent',
	'FocusEvent',
	'InputEvent',
	'KeyboardEvent',
	'MouseEvent',
	'TouchEvent',
	'WheelEvent',
	'Comment',
	'DomTokenList',
	'CssStyleDeclaration',
]
