[package]
name = "async_ui_web_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0"
scoped-tls-hkt = "0.1.2"

smallvec = { version = "1.9.0", features = ["union", "const_generics"] }
futures-concurrency = { git = "https://github.com/wishawa/futures-concurrency", branch = "pr-3-poll-only-woken" }

wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
	'Node',
	'Window',
	'Document',
]