[package]
name = "async_ui_web_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0"
scoped-tls-hkt = "0.1.2"

smallvec = { version = "1", features = ["union", "const_generics"] }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }

wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }

async_ui_internal_utils = { version = "0.0.2", path = "../async_ui_internal_utils/" }

[dependencies.web-sys]
version = "0.3.64"
features = [
	'Node',
	'Window',
	'Document',
]

[dev-dependencies]
futures-lite = "1.12.0"