[package]
name = "async_ui_web_html"
version = "0.2.1"
edition = "2021"
description = "Async UI for the Browser"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

[dependencies]
async_ui_web_core = { version = "0.2.1", path = "../async_ui_web_core/" }
async_ui_internal_utils = { version = "0.0.2", path = "../async_ui_internal_utils/" }

wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

smallvec = { version = "1", features = ["union", "const_generics"] }

pin-project = "1.0"
futures-core = "0.3.28"
futures-lite = "1.13.0"

async-executor = "1.5.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
	'Node',
	'Window',
	'Document',
	'HtmlElement',
	'HtmlAudioElement',
	'HtmlVideoElement',
	'HtmlCanvasElement',
	'HtmlTableColElement',
	'HtmlDataListElement',
	'HtmlMetaElement',
	'HtmlLabelElement',
	'HtmlHeadElement',
	'HtmlBrElement',
	'HtmlTableSectionElement',
	'HtmlDListElement',
	'HtmlTableElement',
	'HtmlUListElement',
	'HtmlTableCellElement',
	'HtmlDetailsElement',
	'HtmlProgressElement',
	'HtmlSlotElement',
	'HtmlQuoteElement',
	'HtmlTimeElement',
	'HtmlTemplateElement',
	'HtmlTitleElement',
	'HtmlOptGroupElement',
	'HtmlSourceElement',
	'HtmlFontElement',
	'HtmlMeterElement',
	'HtmlFormElement',
	'HtmlIFrameElement',
	'HtmlMediaElement',
	'HtmlLinkElement',
	'HtmlBodyElement',
	'HtmlAreaElement',
	'HtmlHrElement',
	'HtmlMapElement',
	'HtmlEmbedElement',
	'HtmlDataElement',
	'HtmlSpanElement',
	'HtmlLiElement',
	'HtmlOListElement',
	'HtmlAnchorElement',
	'HtmlMenuElement',
	'HtmlHtmlElement',
	'HtmlTableRowElement',
	'HtmlDialogElement',
	'HtmlPreElement',
	'HtmlLegendElement',
	'HtmlFrameElement',
	'HtmlStyleElement',
	'HtmlTableCaptionElement',
	'HtmlOptionElement',
	'HtmlDivElement',
	'HtmlFrameSetElement',
	'HtmlDirectoryElement',
	'HtmlPictureElement',
	'HtmlTextAreaElement',
	'HtmlImageElement',
	'HtmlObjectElement',
	'HtmlUnknownElement',
	'HtmlBaseElement',
	'HtmlInputElement',
	'HtmlScriptElement',
	'HtmlOutputElement',
	'HtmlMenuItemElement',
	'HtmlParamElement',
	'HtmlModElement',
	'HtmlSelectElement',
	'HtmlTrackElement',
	'HtmlButtonElement',
	'HtmlParagraphElement',
	'HtmlHeadingElement',
	'HtmlFieldSetElement',
	'Text',	
	'ClipboardEvent',
	'CompositionEvent',
	'FocusEvent',
	'InputEvent',
	'KeyboardEvent',
	'MouseEvent',
	'TouchEvent',
	'WheelEvent',
	'DragEvent',
	# 'ClipboardEvent',
	'Comment',
	'DomTokenList',
	'CssStyleDeclaration',
	'AddEventListenerOptions'
]
