[package]
name = "async_ui_web_html"
version = "0.2.1"
edition = "2021"
description = "Async UI for the Browser"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

[dependencies]
async_ui_web_core = { version = "0.2.1", path = "../async_ui_web_core/" }
async_ui_internal_utils = { version = "0.0.2", path = "../async_ui_internal_utils/" }

wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

smallvec = { version = "1", features = ["union", "const_generics"] }

pin-project = "1.0"
futures-core = "0.3.28"
futures-lite = "1.13.0"

async-executor = "1.5.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
	'ClipboardEvent',
	'CompositionEvent',
	'FocusEvent',
	'InputEvent',
	'KeyboardEvent',
	'MouseEvent',
	'TouchEvent',
	'WheelEvent',
	'DragEvent',
	# 'ClipboardEvent',
]

[features]
default = ["ssr"]
# Events are not feature-gated to make code just work somehow without
# shimming them all, event handlers are noop in SSR.
csr = [
	'web-sys/Node',
	'web-sys/Window',
	'web-sys/Document',
	'web-sys/Text',	
	'web-sys/Comment',
	'web-sys/DomTokenList',
	'web-sys/CssStyleDeclaration',
	'web-sys/AddEventListenerOptions',
	'web-sys/HtmlElement',
	'web-sys/HtmlAudioElement',
	'web-sys/HtmlVideoElement',
	'web-sys/HtmlCanvasElement',
	'web-sys/HtmlTableColElement',
	'web-sys/HtmlDataListElement',
	'web-sys/HtmlMetaElement',
	'web-sys/HtmlLabelElement',
	'web-sys/HtmlHeadElement',
	'web-sys/HtmlBrElement',
	'web-sys/HtmlTableSectionElement',
	'web-sys/HtmlDListElement',
	'web-sys/HtmlTableElement',
	'web-sys/HtmlUListElement',
	'web-sys/HtmlTableCellElement',
	'web-sys/HtmlDetailsElement',
	'web-sys/HtmlProgressElement',
	'web-sys/HtmlSlotElement',
	'web-sys/HtmlQuoteElement',
	'web-sys/HtmlTimeElement',
	'web-sys/HtmlTemplateElement',
	'web-sys/HtmlTitleElement',
	'web-sys/HtmlOptGroupElement',
	'web-sys/HtmlSourceElement',
	'web-sys/HtmlFontElement',
	'web-sys/HtmlMeterElement',
	'web-sys/HtmlFormElement',
	'web-sys/HtmlIFrameElement',
	'web-sys/HtmlMediaElement',
	'web-sys/HtmlLinkElement',
	'web-sys/HtmlBodyElement',
	'web-sys/HtmlAreaElement',
	'web-sys/HtmlHrElement',
	'web-sys/HtmlMapElement',
	'web-sys/HtmlEmbedElement',
	'web-sys/HtmlDataElement',
	'web-sys/HtmlSpanElement',
	'web-sys/HtmlLiElement',
	'web-sys/HtmlOListElement',
	'web-sys/HtmlAnchorElement',
	'web-sys/HtmlMenuElement',
	'web-sys/HtmlHtmlElement',
	'web-sys/HtmlTableRowElement',
	'web-sys/HtmlDialogElement',
	'web-sys/HtmlPreElement',
	'web-sys/HtmlLegendElement',
	'web-sys/HtmlFrameElement',
	'web-sys/HtmlStyleElement',
	'web-sys/HtmlTableCaptionElement',
	'web-sys/HtmlOptionElement',
	'web-sys/HtmlDivElement',
	'web-sys/HtmlFrameSetElement',
	'web-sys/HtmlDirectoryElement',
	'web-sys/HtmlPictureElement',
	'web-sys/HtmlTextAreaElement',
	'web-sys/HtmlImageElement',
	'web-sys/HtmlObjectElement',
	'web-sys/HtmlUnknownElement',
	'web-sys/HtmlBaseElement',
	'web-sys/HtmlInputElement',
	'web-sys/HtmlScriptElement',
	'web-sys/HtmlOutputElement',
	'web-sys/HtmlMenuItemElement',
	'web-sys/HtmlParamElement',
	'web-sys/HtmlModElement',
	'web-sys/HtmlSelectElement',
	'web-sys/HtmlTrackElement',
	'web-sys/HtmlButtonElement',
	'web-sys/HtmlParagraphElement',
	'web-sys/HtmlHeadingElement',
	'web-sys/HtmlFieldSetElement',
]
ssr = []
