[package]
name = "async_ui_web_macros"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
cssparser = "=0.31.0"