[package]
name = "observables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = { version = "0.3.30", optional = true }
waker-fn = { version = "1.1.0", optional = true }
pin-project-lite = "0.2.9"

[features]
default = ["futures-signals"]
futures-signals = ["dep:futures-signals", "dep:waker-fn"]