[package]
name = "observables"
version = "0.1.0"
edition = "2021"
description = "Simple Reactivity"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = { version = "0.3.30", optional = true }
waker-fn = { version = "1.1.0", optional = true }
async-channel = { version = "1.7.1", optional = true }
pin-project-lite = "0.2.9"
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }

[features]
default = ["futures-signals", "async-channel"]
futures-signals = ["dep:futures-signals", "dep:waker-fn"]
async-channel = ["dep:async-channel", "dep:waker-fn"]