[package]
name = "x-bow"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wishawa/async_ui"

[dependencies]
async_ui_internal_utils = { path = "../async_ui_internal_utils", version = "0.0.2" }
nohash-hasher = "0.2.0"
futures-core = "0.3.28"
x-bow-macros = { path = "../x-bow-macros/" }
pin-project-lite = "0.2"

[dev-dependencies]
futures-lite = "1.12.0"