[package]
name = "async_ui_web_draggable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_ui_web = { path = "../../async_ui_web/" }
futures-lite = "1.13.0"
async_ui_internal_utils = { path = "../../async_ui_internal_utils/" }

[dependencies.web-sys]
version = "0.3"
features = [
	'DomRect',
	'Element',
	'DataTransfer',
]