[package]
name = "big-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async_ui_web = { path = "../../async_ui_web/" }
wasm-bindgen = "0.2.82"
futures-lite = "1.13.0"
console_error_panic_hook = "0.1.6"

scopeguard = "1.1.0"