[package]
name = "web-hackernews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-unknown-unknown"


[lib]
crate-type = ["cdylib"]

[dependencies]
async_ui_web = { path = "../../async_ui_web/" }
observables = { path = "../../observables/" }
wasm-bindgen = "0.2.82"
console_error_panic_hook = "0.1.6"
surf = { version = "2.3.2", default-features = false, features = ["wasm-client"] }
serde = { version = "1.0", features = ["derive"] }