[package]
name = "web-hackernews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hackernews = { path = "../hackernews/", features = ["web"] }
wasm-bindgen = "0.2.82"
console_error_panic_hook = "0.1.6"
async_ui_web = { path = "../../async_ui_web/" }