[package]
name = "x-bow-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
async_ui_web = { path = "../../async_ui_web/" }
x-bow = { path = "../../x-bow/" }

wasm-bindgen = "0.2.82"
console_error_panic_hook = "0.1.6"

futures-lite = "1.13.0"

[dependencies.web-sys]
version = "0.3.56"
features = [
	'console'
]

[features]
default = ["csr"]
csr = ["async_ui_web/csr"]
ssr = []
